<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".walletProfile.menu.settings.SettingsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <TextView
            android:id="@+id/dummyText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="" />


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="100sp"
            android:contentDescription="@string/wallet_icon"
            android:src="@drawable/ic_wallet_black_24" />

        <TextView
            android:id="@+id/walletText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="20sp"
            android:text="@string/wallet_address_text" />

        <TextView
            android:id="@+id/addressText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="15sp"
            android:text="" />

        <TextView
            android:id="@+id/profileSection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="textStart"
            android:textSize="15sp"
            android:paddingStart="10dp"
            android:paddingEnd="5dp"
            android:text="@string/profile_text" />

        <Button
            android:id="@+id/codyAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            android:background="@color/white"
            android:text="@string/copy_address_text"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:drawableStart="@drawable/ic_copy_black_24"
            android:drawablePadding="10dp"
            android:paddingEnd="0dp"
            android:paddingStart="15dp"/>

        <Button
            android:id="@+id/exportWallet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:background="@color/white"
            android:text="@string/export_wallet"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:drawableStart="@drawable/ic_export_black_24"
            android:drawablePadding="10dp"
            android:paddingEnd="0dp"
            android:paddingStart="15dp"/>

        <TextView
            android:id="@+id/securitySection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp"
            android:textAlignment="textStart"
            android:textSize="15sp"
            android:paddingStart="10dp"
            android:paddingEnd="5dp"
            android:text="@string/security_text" />

        <Button
            android:id="@+id/eventLogButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:background="@color/white"
            android:text="@string/event_log_text"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:drawableStart="@drawable/ic_log_black_24"
            android:drawablePadding="10dp"
            android:paddingEnd="0dp"
            android:paddingStart="15dp"/>

        <Button
            android:id="@+id/monitoringButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:background="@color/white"
            android:text="@string/monitoring_text"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:drawableStart="@drawable/ic_lock_black_24"
            android:drawablePadding="10dp"
            android:paddingEnd="0dp"
            android:paddingStart="15dp"/>

        <TextView
            android:id="@+id/aboutUsSection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp"
            android:textAlignment="textStart"
            android:textSize="15sp"
            android:paddingStart="10dp"
            android:paddingEnd="5dp"
            android:text="@string/about_us_text" />

        <Button
            android:id="@+id/deleteWallet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:background="@color/white"
            android:text="@string/delete_wallet"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:drawableStart="@drawable/ic_close_black_24"
            android:drawablePadding="10dp"
            android:paddingEnd="0dp"
            android:paddingStart="15dp"/>

        <Button
            android:id="@+id/logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:background="@color/white"
            android:text="@string/logout_wallet"
            android:textColor="#FB0000"
            android:textSize="20sp"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:drawableStart="@drawable/ic_exit_black_24"
            android:drawablePadding="10dp"
            android:paddingEnd="0dp"
            android:paddingStart="15dp"/>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>