<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".walletProfile.WalletMain">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="8sp"
        tools:layout_editor_absoluteY="8sp">

        <TextView
            android:id="@+id/dummyText"
            android:layout_width="match_parent"
            android:layout_height="106dp"
            android:text="" />

        <TextView
            android:id="@+id/confirmMessage"
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:text="@string/delete_confirm_message_1"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/confirmMessage2"
            android:layout_width="match_parent"
            android:layout_height="66dp"
            android:text="@string/delete_confirm_message_2" />

        <EditText
            android:id="@+id/deletePasswordConfirm"
            style="@style/Base.TextAppearance.AppCompat.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30sp"
            android:ems="10"
            android:hint="@string/pwd_placeholder"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/dummyText2"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:text="" />

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:backgroundTint="@color/white"
            android:text="@string/cancel_button"
            android:textColor="@color/purple_500"
            android:textSize="15sp" />

        <Button
            android:id="@+id/deleteButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:background="@color/purple_500"
            android:text="@string/delete_wallet"
            android:textColor="#ffffff"
            android:textSize="15sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>