<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.android.twallet.vanilla.MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center"
        tools:layout_editor_absoluteX="8sp"
        tools:layout_editor_absoluteY="8sp">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="106dp"
            android:text="" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="100sp"
            android:contentDescription="@string/app_icon"
            android:src="@drawable/font" />

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5sp"
            android:text="@string/unlock_wallet"
            android:textAlignment="center"
            android:textColor="@color/purple_700"
            android:textSize="35sp"
            android:textStyle="bold|italic" />

        <EditText
            android:id="@+id/passwordEditText"
            style="@style/Base.TextAppearance.AppCompat.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30sp"
            android:ems="10"
            android:hint="@string/pwd_placeholder"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:textAlignment="center" />

        <Button
            android:id="@+id/unlockWallet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:background="@color/purple_500"
            android:text="@string/unlock_wallet_btn"
            android:textColor="#ffffff"
            android:textSize="20sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
