<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".walletProfile.WalletMain">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="8sp"
        tools:layout_editor_absoluteY="8sp">

        <TextView
            android:id="@+id/dummyText"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="" />

        <TextView
            android:id="@+id/confirmMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/retrieve_log_message_1"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/confirmMessage2"
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:text="@string/retrieve_log_message_2"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/dummyText2"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="1"
            android:gravity="center|bottom"
            android:orientation="vertical">

            <Button
                android:id="@+id/cancelButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:backgroundTint="@color/white"
                android:text="@string/cancel_button"
                android:textColor="@color/purple_500"
                android:textSize="15sp" />

            <Button
                android:id="@+id/retrieveButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:background="@color/purple_500"
                android:text="@string/retrieve_log"
                android:textColor="#ffffff"
                android:textSize="15sp" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>